--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   provider: ^3.0.0+1
   http: ^0.12.0+2
   xml2json: ^3.0.3
-  firebase_crashlytics: ^0.1.0+2
+#  firebase_crashlytics: ^0.1.1+2
   flutter_pagewise: 1.2.3
   vin_decoder: ^0.1.0
   flutter_form_builder: ^3.5.2
@@ -40,9 +40,8 @@ dependencies:
   flutter_datetime_picker: ^1.2.8
   simple_animations: ^1.3.4
   progress_button: ^0.0.2
-  url_launcher: ^5.2.5
-
-
+  url_launcher: ^5.2.7
+  image_picker: 0.6.1+11
 
 
 dev_dependencies:
