--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   progress_button: ^0.0.2
   url_launcher: ^5.2.7
   image_picker: 0.6.1+11
+  flutter_secure_storage: ^3.3.1+1
 
 
 dev_dependencies:
