--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,34 +14,34 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.5.2 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  custom_navigator: ^0.2.0
+  custom_navigator: ^0.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  intl: 0.15.8
+  intl: 0.16.1
   percent_indicator: ^2.1.1
-  provider: ^3.0.0+1
+  provider: ^4.1.3
   http: ^0.12.0+2
-  xml2json: ^3.0.3
+  xml2json: ^4.2.0
   firebase_crashlytics: ^0.1.1+2
   flutter_pagewise: 1.2.3
-  vin_decoder: ^0.1.0
-  flutter_form_builder: ^3.5.2
+  vin_decoder: ^0.1.2
+  flutter_form_builder: ^3.11.3
   flutter_typeahead: ^1.7.0
   autocomplete_textfield: ^1.6.4
   validate: ^1.7.0
   flutter_launcher_icons: ^0.7.3
   flutter_datetime_picker: ^1.2.8
-  simple_animations: ^1.3.4
+  simple_animations: ^2.2.1
   progress_button: ^0.0.2
-  url_launcher: ^5.2.7
-  image_picker: 0.6.1+11
+  url_launcher: ^5.4.11
+  image_picker: 0.6.7+2
   flutter_secure_storage: ^3.3.1+1
 
 
