--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: 0.6.7+2
   flutter_secure_storage: ^3.3.1+1
   geolocator: ^5.3.2+2
+  get_version: ^0.2.2
 
 
 dev_dependencies:
