--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_secure_storage: ^3.3.1+1
   geolocator: ^5.3.2+2
   get_version: ^0.2.2
+  visibility_detector: ^0.1.5
 
 
 dev_dependencies:
