--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   simple_animations: ^2.2.1
   progress_button: ^0.0.2
   url_launcher: ^5.4.11
-  image_picker: 0.6.7+2
+  image_picker: ^0.6.7+11
   flutter_secure_storage: ^3.3.1+1
   geolocator: ^5.3.2+2
   get_version: ^0.2.2
