--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -29,8 +29,12 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs camera</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app needs microphone</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app requires access to the Photo Library</string>
+	<string>This app needs camera</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
