--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  custom_navigator: ^0.3.0
+#  custom_navigator: ^0.3.0
   get: ^3.2.2
-
+  custom_navigator:
+    git:
+      url: https://github.com/kjawadDeveloper/Custom-navigator.git
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,7 +50,6 @@ dependencies:
   geolocator: ^5.3.2+2
   get_version: ^0.2.2
   visibility_detector: ^0.1.5
-
 
 dev_dependencies:
 
