--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   url_launcher: ^5.4.11
   image_picker: ^0.6.7+11
   flutter_secure_storage: ^3.3.1+1
-  geolocator: ^5.3.2+2
+  geolocator: ^6.1.1
   get_version: ^0.2.2
   visibility_detector: ^0.1.5
 
