--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   geolocator: ^6.1.1
   get_version: ^0.2.2
   visibility_detector: ^0.1.5
+  flutter_masked_text: ^0.8.0
 
 dev_dependencies:
 
