--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   intl: 0.16.1
   percent_indicator: ^2.1.1
-  provider: ^4.1.3
+  provider: ^4.3.2+2
   http: ^0.12.0+2
   xml2json: ^4.2.0
   firebase_crashlytics: ^0.1.1+2
@@ -46,7 +46,7 @@ dependencies:
   progress_button: ^0.0.2
   url_launcher: ^5.4.11
   image_picker: ^0.6.7+11
-  flutter_secure_storage: ^3.3.1+1
+  flutter_secure_storage: ^3.3.5
   geolocator: ^6.1.1
   get_version: ^0.2.2
   visibility_detector: ^0.1.5
