--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   get_version: ^0.2.2
   visibility_detector: ^0.1.5
   flutter_masked_text: ^0.8.0
+  flutter_dotenv: ^2.1.0
 
 dev_dependencies:
 
@@ -78,6 +79,8 @@ flutter:
   assets:
     - assets/logo.png
     - assets/success.png
+    - assets/env_development
+    - assets/env_production
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
