Pre Release Build 3

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="VTS Mobile CLoud"
+        android:label="VTS Mobile Cloud"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
